--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,15 @@
 <resources>
-    <string name="app_name">Demo1</string>
-
+    <string name="app_name">First App</string>
+    <string name="newGame">New game</string>
+    <string name="quit">Quit</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="menu">Menu</string>
+    <string name="title_activity_game">GameActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="between">Minimum</string>
+    <string name="and">Maximum</string>
+    <string name="guess">Guess</string>
+    <string name="title">Guess a number</string>
 </resources>
